# spider_robot_ws

./: README.md  analysis_data.csv  data_pose.csv  data_torque.csv  data_trajectory.csv  end_effector_trajectory.csv  end_effector_trajectory_clean.csv  experiment_results.csv  joint_torque_analysis.csv  操作指南手冊.txt
install/: local_setup.sh  (+1 more)
src/spider_bot/: README.md  package.xml  power_consumption.txt  setup.cfg  setup.py
src/spider_bot/autostart_scripts/: ROS_CONFIG.txt  ros2_atcart_basic.service  ros2_realsense_handler.service  ros2_spider_bot_control.service  start_atcart_basic.sh  start_browser.sh  start_realsense_handler.sh  start_signaling_server.sh  start_spider_bot_control.sh  start_zenoh_bridge.sh  webrtc_browser.service  webrtc_signaling_server.service  webrtc_zenoh_bridge.service
src/spider_bot/config/: spider_bot_controllers.yaml  spider_bot_new_controllers.yaml
src/spider_bot/install/: local_setup.sh  setup.sh
src/spider_bot/launch/: gazebo_launch.py  gazebo_new_launch.py  spider_bot_control.launch.py
src/spider_bot/log/: latest_build
src/spider_bot/spider_bot/: SVM_training.ipynb  SpiderBotDriver.py  SpiderBotLib.py  SpiderBotLib.py.bak  imu_reader.py  plot_thesis.py  realsense_handler.py  run.py  shutdown.py  spider_bot_control.py  standup.py  tank.py  test_node.py  test_servo.py  train_data_collector.py  windows_to_wsl_imu.py
src/spider_bot/terrain_tools/: generate_rough_ground.py
src/spider_bot/urdf/: spider.urdf  spider_bot.urdf  spider_tank.urdf
src/spider_bot/worlds/: empty_high_friction.world  rough_terrain.world  safe_terrain.world
(+62 files in other folders)
